# wave_crusher

./: .gitignore  CMakeLists.txt
src/: main.cpp  main.h
src/Render/: Window.cpp  Window.h
src/Wave/: Waves.cpp  Waves.h
